# SI-Mandatory-2

part_1/: .env  Mandatory_2_part_1.docx  ~$ndatory_2_part_1.docx
part_2/: champions.db  db.py  pyproject.toml  webscraper.py
