[tool.poetry]
name = "part-2"
version = "0.1.0"
description = ""
authors = ["kasper <kasperkbf@hotmail.com>"]
readme = "README.md"
packages = [{include = "part_2"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
